@@ -1,4 +1,4 @@
-/* $Id: proto.h,v 1.22 2001/12/26 18:29:33 ukai Exp $ */
+/* $Id: proto.h,v 1.23 2002/01/11 20:05:58 ukai Exp $ */
 /* 
  *   This file was automatically generated by version 1.7 of cextract.
  *   Manual editing not recommended.
@@ -424,6 +424,7 @@ extern char *guessContentType(char *filename);
 extern TextList *make_domain_list(char *domain_list);
 extern int check_no_proxy(char *domain);
 extern FILE *openFTP(ParsedURL *pu);
+extern Str readFTPDir(ParsedURL *pu);
 extern void closeFTP(FILE * f);
 extern int Ftpfclose(FILE * f);
 extern AnchorList *putAnchor(AnchorList *al, char *url, char *target,
